--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.57.0",
     "@tailwindcss/vite": "^4.1.12",
+    "@uidotdev/usehooks": "^2.4.1",
+    "lucide-react": "^0.543.0",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
@@ -21,9 +23,11 @@
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.8.2",
     "react-spinners": "^0.17.0",
+    "select-philippines-address": "^1.0.6",
     "swr": "^2.3.6",
     "tailwindcss": "^4.1.12",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
