--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@supabase/supabase-js": "^2.57.0",
     "@tailwindcss/vite": "^4.1.12",
     "@uidotdev/usehooks": "^2.4.1",
+    "country-state-city": "^3.2.1",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.543.0",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
@@ -23,6 +25,8 @@
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.8.2",
     "react-spinners": "^0.17.0",
+    "react-spring": "^10.0.3",
+    "recharts": "^3.2.1",
     "select-philippines-address": "^1.0.6",
     "swr": "^2.3.6",
     "tailwindcss": "^4.1.12",
